# advent-of-code-2025

./: .gitignore
day1/: main.lua  test.sh
day2/: build.zig.zon  test.sh
day2-rust/: Cargo.toml
day2-rust/src/: main.rs
day2/src/: main.zig
day3/: Justfile  main.c
day3-rust/: Cargo.toml
day3-rust/src/: main.rs
day4/: main.exs
day5/: main.rb
day6-rust/: Cargo.toml
day6-rust/src/: main.rs
day7/: day7.cabal
day7/src/: Coord.hs  Main.hs
day8-rust/: Cargo.toml
day8-rust/src/: main.rs
day9/: main.go
