cabal-version:      3.0
name:               day7
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable day7
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Coord

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.18.3.0,
        containers ^>= 0.8,
        mtl ^>= 2.3.2

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010
